// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FileShares > collaborators list > renders sharedWithLabel and sharee list 1`] = `
"<div data-v-5d17c3fa="" id="oc-files-sharing-sidebar" class="oc-position-relative">
  <div data-v-5d17c3fa="" class="oc-flex">
    <h3 data-v-5d17c3fa="" class="oc-text-bold oc-text-medium oc-m-rm" data-msgid="Share with people" data-current-language="en">Share with people</h3>
    <oc-contextual-helper-stub data-v-5d17c3fa="" title="Share with people" text="Use the input field to search for users and groups. Select them to share the item." list="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]" endtext="" readmorelink="https://doc.owncloud.com/go?to=webui-users-sharing" class="oc-pl-xs"></oc-contextual-helper-stub>
  </div>
  <invite-collaborator-form-stub data-v-5d17c3fa="" savebuttonlabel="Share" invitelabel="" class="oc-my-s"></invite-collaborator-form-stub>
  <div data-v-5d17c3fa="" id="files-collaborators-headline" class="oc-flex oc-flex-middle oc-flex-between">
    <h4 data-v-5d17c3fa="" class="oc-text-bold oc-my-rm">Shared with</h4>
    <copy-private-link-stub data-v-5d17c3fa="" resource="undefined"></copy-private-link-stub>
  </div>
  <portal-target data-v-5d17c3fa="" name="app.files.sidebar.sharing.shared-with.top" slot-props="[object Object]" multiple="true"></portal-target>
  <ul data-v-5d17c3fa="" id="files-collaborators-list" class="oc-list oc-list-divider oc-overflow-hidden oc-m-rm" aria-label="Share receivers">
    <li data-v-5d17c3fa="">
      <collaborator-list-item-stub data-v-5d17c3fa="" share="[object Object]" issharedenied="false" modifiable="true" resourcename="[Function]" deniable="false" islocked="[Function]" isspaceshare="false"></collaborator-list-item-stub>
    </li>
    <li data-v-5d17c3fa="">
      <collaborator-list-item-stub data-v-5d17c3fa="" share="[object Object]" issharedenied="false" modifiable="true" resourcename="[Function]" deniable="false" islocked="[Function]" isspaceshare="false"></collaborator-list-item-stub>
    </li>
    <li data-v-5d17c3fa="">
      <collaborator-list-item-stub data-v-5d17c3fa="" share="[object Object]" issharedenied="false" modifiable="true" resourcename="[Function]" deniable="false" islocked="[Function]" isspaceshare="false"></collaborator-list-item-stub>
    </li>
    <li data-v-5d17c3fa="">
      <collaborator-list-item-stub data-v-5d17c3fa="" share="[object Object]" issharedenied="false" modifiable="true" resourcename="[Function]" deniable="false" islocked="[Function]" isspaceshare="false"></collaborator-list-item-stub>
    </li>
    <portal-target data-v-5d17c3fa="" name="app.files.sidebar.sharing.shared-with.bottom" slot-props="[object Object]" multiple="true"></portal-target>
  </ul>
  <div data-v-5d17c3fa="" class="oc-flex oc-flex-center"><button data-v-5d17c3fa="" type="button" class="oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw toggle-shares-list-btn">
      <!--v-if-->
      <!-- @slot Content of the button --> Show less
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`FileShares > current space > loads space members if a space is given and the current user is member 1`] = `
"<div data-v-5d17c3fa="" id="oc-files-sharing-sidebar" class="oc-position-relative">
  <div data-v-5d17c3fa="" class="oc-flex">
    <h3 data-v-5d17c3fa="" class="oc-text-bold oc-text-medium oc-m-rm" data-msgid="Share with people" data-current-language="en">Share with people</h3>
    <oc-contextual-helper-stub data-v-5d17c3fa="" title="Share with people" text="Use the input field to search for users and groups. Select them to share the item." list="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]" endtext="" readmorelink="https://doc.owncloud.com/go?to=webui-users-sharing" class="oc-pl-xs"></oc-contextual-helper-stub>
  </div>
  <invite-collaborator-form-stub data-v-5d17c3fa="" savebuttonlabel="Share" invitelabel="" class="oc-my-s"></invite-collaborator-form-stub>
  <div data-v-5d17c3fa="" id="files-collaborators-headline" class="oc-flex oc-flex-middle oc-flex-between">
    <h4 data-v-5d17c3fa="" class="oc-text-bold oc-my-rm">Shared with</h4>
    <copy-private-link-stub data-v-5d17c3fa="" resource="undefined"></copy-private-link-stub>
  </div>
  <portal-target data-v-5d17c3fa="" name="app.files.sidebar.sharing.shared-with.top" slot-props="[object Object]" multiple="true"></portal-target>
  <ul data-v-5d17c3fa="" id="files-collaborators-list" class="oc-list oc-list-divider oc-overflow-hidden oc-mb-l" aria-label="Share receivers">
    <li data-v-5d17c3fa="">
      <collaborator-list-item-stub data-v-5d17c3fa="" share="[object Object]" issharedenied="false" modifiable="false" resourcename="[Function]" deniable="false" islocked="[Function]" isspaceshare="false"></collaborator-list-item-stub>
    </li>
    <portal-target data-v-5d17c3fa="" name="app.files.sidebar.sharing.shared-with.bottom" slot-props="[object Object]" multiple="true"></portal-target>
  </ul>
  <!--v-if-->
  <div data-v-5d17c3fa="" class="oc-flex oc-flex-middle oc-flex-between">
    <h4 data-v-5d17c3fa="" class="oc-text-bold oc-my-s">Space members</h4>
    <!--v-if-->
  </div>
  <ul data-v-5d17c3fa="" id="space-collaborators-list" class="oc-list oc-list-divider oc-overflow-hidden oc-m-rm" aria-label="Space members">
    <li data-v-5d17c3fa="">
      <collaborator-list-item-stub data-v-5d17c3fa="" share="[object Object]" issharedenied="false" modifiable="false" resourcename="[Function]" deniable="false" islocked="false" isspaceshare="true"></collaborator-list-item-stub>
    </li>
    <li data-v-5d17c3fa="">
      <collaborator-list-item-stub data-v-5d17c3fa="" share="[object Object]" issharedenied="false" modifiable="false" resourcename="[Function]" deniable="false" islocked="false" isspaceshare="true"></collaborator-list-item-stub>
    </li>
  </ul>
  <!--v-if-->
</div>"
`;
